# CultivateAgent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.example.yaml
cultivate_agent/: __init__.py  cli.py  config.py
data/: library.example.bib
docs/: AI_COLLABORATION_PROTOCOL.md  AI_FOR_SCIENCE_METHOD_REVIEW.md  ARCHITECTURE.md  BOVINE_CORPUS_GATE1_AUDIT.md  BOVINE_CORPUS_MANIFEST.md  BOVINE_JATS_GROUP_STATS_AUDIT.md  BOVINE_VISUAL_ASSET_READINESS.md  CLAUDE_WORK_SYNC.md  DEEPSEEK_ALIAS_CANARY.md  DEEPSEEK_LOCATOR_CANARY.md  DEEPSEEK_METADATA_LINKAGE_CANARY.md  DEEPSEEK_PAGE_CAPABILITY.md  DEEPSEEK_PAGE_HOLDOUT.md  DEEPSEEK_PAGE_SHADOW_R053_R055.md  EVAL_RESULTS.md  EVIDENCE_AUDIT_PROLIFERATION.md  EVIDENCE_PRIOR_BENCHMARK.md  EVIDENCE_SYNTHESIS.md  EXTRACTION_READINESS_H001_H016.md  EXTRACTION_READINESS_H031_H033.md  EXTRACTION_READINESS_H034_H037.md  EXTRACTION_READINESS_H038_H042.md  FULLTEXT_GOLD_VALIDATION_MEDIUM_PILOT_V1.md  FULLTEXT_GOLD_VALIDATION_MEDIUM_V1.md  HANDOFF_PROMPT.md  HUMAN_ADJUDICATION_STATUS_H001_H014.md  HUMAN_ADJUDICATION_VALIDATION_H001_H014.md  HUMAN_REVIEW_PACKET_H001_H016.md  HUMAN_REVIEW_PACKET_H031_H033.md  HUMAN_REVIEW_PACKET_H034_H037.md  HUMAN_REVIEW_PACKET_H038_H042.md  LITERATURE_DECISION_RECORD_WETLAB_ENTRY.md  LIVE_RUN_DEEPSEEK.md  METHODS_TECHNICAL_SCHEME.md  MODEL_AGREEMENT.md  MODEL_COMPARISON_DEEPSEEK.md  OPTIMIZATION.md  OPTIMIZATION_BENCHMARK.md  PDF_TABLE_OFFRAMP_AUDIT.md  PROJECT_WORKFLOW.md  (+7 more)
scripts/: audit_bovine_corpus.py  audit_bovine_jats_group_stats.py  audit_zotero_oa.py  (+32 more)
(+186 files in other folders)
